--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bootstrap, from Twitter</title>
+    <title>Teach me Korean</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -28,7 +28,7 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-
+    <link href="css/jquery-ui-1.10.2.custom.min.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -52,13 +52,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="brand" href="#">Project name</a>
+          <a class="brand" href="#">Teach me Korean</a>
           <div class="nav-collapse collapse">
             <p class="navbar-text pull-right">
               Logged in as <a href="#" class="navbar-link">Username</a>
             </p>
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a id="home" href="#">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
@@ -67,17 +67,47 @@
       </div>
     </nav>
     </header>
-
+      <script id="header-template" type="text/x-handlebars-template">
+          {{#header}}
+              <div class="hero-unit">
+              <h1>{{title}}</h1>
+              <p>{{content}}</p>
+          <p><a href="#" class="btn btn-primary btn-large">{{{details}}}</a></p>
+              </div>
+          {{/header}}
+      </script>
+      <script id="content-template" type="text/x-handlebars-template">
+          <div class="row-fluid">
+          {{#section}}
+          <section class="span4">
+          <h2>{{heading}}</h2>
+          <p>{{content}}</p>
+          <p><a class="btn" href="#">{{{details}}}</a></p>
+          </section>
+          {{/section}}
+          </script>
+      <script id="lesson-template" type="text/x-handlebars-template">
+          <div class="row-fluid">
+          {{#lesson}}
+          <div class="hero-unit">
+          <h2>{{english}}</h2>
+          <h2>{{korean}}</h2>
+          <h2>{{romanized}}</h2>
+          {{!use for english meanings, korean synonyms, and other verb conjugations of this word}}
+          <h2>{{details}}</h2>
+          </div>
+          {{/lesson}}
+          </script>
     <div class="container-fluid">
       <div class="row-fluid">
         <aside class="span3">
           <div class="well sidebar-nav">
             <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li class="active"><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
-              <li><a href="#">Link</a></li>
+              <li class="nav-header">Lessons</li>
+              <li class="active"><a class="lesson-1" href="#">Lesson 1</a></li>
+              <li><a class="lesson-2" href="#">Lesson 2</a></li>
+              <li><a href="#">Lesson 3</a></li>
+              <li><a href="#">Lesson 4</a></li>
               <li class="nav-header">Sidebar</li>
               <li><a href="#">Link</a></li>
               <li><a href="#">Link</a></li>
@@ -93,45 +123,12 @@
           </div><!--/.well -->
         </aside><!--/span-->
         <article class="span9">
-          <div class="hero-unit">
-            <h1>Hello, world!</h1>
-            <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
-            <p><a href="#" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+          <div id="header-holder" class="hero-unit">
           </div>
-          <div class="row-fluid">
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-          </div><!--/row-->
-          <div class="row-fluid">
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-            <section class="span4">
-              <h2>Heading</h2>
-              <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-              <p><a class="btn" href="#">View details &raquo;</a></p>
-            </section><!--/span-->
-          </div><!--/row-->
+            <div id="lesson-holder">
+                </div>
+            <div id="content-holder">
+            </div><!--/row-->
         </article><!--/span-->
       </div><!--/row-->
 
@@ -149,7 +146,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
-      
-
+    <script src="js/handlebars.js"></script>
+    <script src="js/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="js/main.js"></script> 
   </body>
 </html>
