--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		  {{/lesson-helper}}
           </div>
           </script>
-    <div class="container-fluid">
+    <main class="container-fluid">
       <div class="row-fluid">
         <aside class="span3">
           <div class="well sidebar-nav">
@@ -126,7 +126,7 @@
         </article><!--/span-->
       </div><!--/row-->
 
-    </div><!--/.fluid-container-->
+    </main><!--/.fluid-container-->
       
       <hr>
       
@@ -141,7 +141,7 @@
     <script src="js/underscore-min.js"></script>
     <script src="js/backbone-min.js"></script>
     <script src="js/handlebars.js"></script>
-    <script src="js/jquery-ui-1.10.2.custom.min.js"></script>
+    <script src="js/bootstrap-tooltip.js"></script>
     <script src="js/main.js"></script> 
   </body>
 </html>
