--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
     <link href="css/jquery-ui-1.10.2.custom.min.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -94,8 +95,8 @@
           <div class="well sidebar-nav">
             <ul class="nav nav-list lesson-list">
               <li class="nav-header">Lessons</li>
-              <li class="active"><a class="lesson-1" href="#lesson1">Lesson 1</a></li>
-              <li><a class="lesson-2" href="#">Lesson 2</a></li>
+              <li><a class="lesson-1" href="#lesson1">Lesson 1</a></li>
+              <li><a class="lesson-2" href="#lesson2">Lesson 2</a></li>
               <li><a href="#">Lesson 3</a></li>
               <li><a href="#">Lesson 4</a></li>
               <li class="nav-header">Vocabulary</li>
