adding close button and escaping html in translations

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           </thead>
             <tbody>
             {{#each words}}
-             <tr><td>{{this.word}}</td><td>{{this.translation}}</td></tr>
+             <tr><td>{{this.word}}</td><td>{{{this.translation}}}</td></tr>
             {{/each}}
              </tbody>
            </table>
