--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
       }
     </style>
     <link href="css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="css/jquery-ui-1.10.2.custom.min.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -44,11 +43,10 @@
   </head>
 
   <body>
-    <header>
+    <header class="container-fluid">
     <menu id="korean-menu" class="navbar">
-      <div class="navbar-inner container-fluid">
-        <div class="row-fluid">
-          <nav class="top-nav">
+      <div class="navbar-inner row-fluid">
+          <nav class="top-nav span4">
            <ul class="nav">
             <li><a href="#">Teach me Korean</a></li>
             <li class="divider-vertical"></li>
@@ -56,17 +54,11 @@
             <li><a href="#contact">Contact</a></li>
            </ul>
           </nav>
-          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="nav-collapse collapse">
+          <div class="nav-collapse collapse offset4 span3">
             <p class="navbar-text pull-right">
               Logged in as <a href="#" class="navbar-link">Username</a>
             </p>
           </div><!--/.nav-collapse -->
-        </div>
       </div>
     </menu>
     </header>
@@ -76,20 +68,20 @@
           <aside class="well sidebar-nav">
             <ul class="nav nav-list lesson-list">
               <li class="nav-header">Lessons</li>
-              <li><a href="#lesson1">Lesson 1</a></li>
-              <li><a href="#lesson2">Lesson 2</a></li>
-              <li><a href="#lesson3">Lesson 3</a></li>
-              <li><a href="#lesson4">Lesson 4</a></li>
+              <li><a href="#lesson/1">Lesson 1</a></li>
+              <li><a href="#lesson/2">Lesson 2</a></li>
+              <li><a href="#lesson/3">Lesson 3</a></li>
+              <li><a href="#lesson/4">Lesson 4</a></li>
               <li class="nav-header">Vocabulary</li>
-              <li><a href="#vocab1">Vocab 1</a></li>
-              <li><a href="#vocab2">Vocab 2</a></li>
-              <li><a href="#vocab3">Vocab 3</a></li>
-              <li><a href="#vocab4">Vocab 4</a></li>
-              <li><a href="#vocab5">Vocab 5</a></li>
-              <li><a href="#vocab6">Vocab 6</a></li>
-              <li><a href="#vocab7">Vocab 7</a></li>
-              <li><a href="#vocab8">Vocab 8</a></li>
-              <li><a href="#vocab9">Vocab 9</a></li>
+              <li><a href="#vocab/1">Vocab 1</a></li>
+              <li><a href="#vocab/2">Vocab 2</a></li>
+              <li><a href="#vocab/3">Vocab 3</a></li>
+              <li><a href="#vocab/4">Vocab 4</a></li>
+              <li><a href="#vocab/5">Vocab 5</a></li>
+              <li><a href="#vocab/6">Vocab 6</a></li>
+              <li><a href="#vocab/7">Vocab 7</a></li>
+              <li><a href="#vocab/8">Vocab 8</a></li>
+              <li><a href="#vocab/9">Vocab 9</a></li>
             </ul>
           </aside><!--/.well -->
         </nav><!--/span-->
@@ -121,7 +113,7 @@
       
       <hr>
       
-      <footer>
+      <footer class="container-fluid">
           <p class="muted">&copy; Tong Zou 2013</p>
       </footer>
       <!-- Handlebar templates --> 
