--- a/index.html
+++ b/index.html
@@ -69,23 +69,62 @@
                     </div>
                     <div id="grammar" class="panel-collapse collapse">
                         <div class="panel-body">
-
                             <div class="panel-group" id="grammar-accordian">
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#basics">
+                                                Basics
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="basics" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav">
+                                                <li><a href="#">은/는 (topic)</a></li>
+                                                <li><a href="#">이/가 (subject)</a></li>
+                                                <li><a href="#">을/를 (object)</a></li>
+                                                <li><a href="#">아/어/여 (present tense)</a></li>
+                                                <li><a href="#">았/었/였 (past tense)</a></li>
+                                                <li><a href="#">ㄹ거예요 (future tense)</a></li>
+                                                <li><a href="#">고 있어요 (present progressive)</a></li>
+                                                <li><a href="#">안,지 않다 (negation)</a></li>
+                                                <li><a href="#">기,는 것 (verb into noun)</a></li>
+                                                <li><a href="#">ㄴ/은,는,ㄹ/을 (verb into adjective)</a></li>
+                                                <li><a href="#">이,히,리,기,되다 (passive tense)</a></li>
+                                                <li><a href="#">ㄴ다 (narrative tense)</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title">
                                             <a data-toggle="collapse" data-parent="#grammar-accordian"
-                                               href="#causation">
-                                                Showing Causation
+                                               href="#nouns">
+                                                Noun Particles
                                             </a>
                                         </h4>
                                     </div>
-                                    <div id="causation" class="panel-collapse collapse">
+                                    <div id="nouns" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
-                                                <li><a href="#">V. + (아/어/여)서</a></li>
-                                                <li><a href="#">N. + (이)라(서)</a></li>
-                                                <li><a href="#">V. + (으)니까</a></li>
+                                                <li><a href="#">들 (plural)</a></li>
+                                                <li><a href="#">으로/로 (by,with,direction)</a></li>
+                                                <li><a href="#">의 (possession)</a></li>
+                                                <li><a href="#">(이)나 (or)</a></li>
+                                                <li><a href="#">와/과,하고,(이)랑 (and)</a></li>
+                                                <li><a href="#">도 (also, too)</a></li>
+                                                <li><a href="#">만 (only)</a></li>
+                                                <li><a href="#">에 (location, time)</a></li>
+                                                <li><a href="#">에서 (from, location)</a></li>
+                                                <li><a href="#">부터,까지 (from, to)</a></li>
+                                                <li><a href="#">한테,한테서,에게,에게서,께 (from, to)</a></li>
+                                                <li><a href="#">보다,비해서 (comparison)</a></li>
+                                                <li><a href="#">위해/위해서 (in order to)</a></li>
+                                                <li><a href="#">중에,중에서,사이에,사이에서 (between, amongst)</a></li>
+                                                <li><a href="#">만큼 (as much as)</a></li>
+                                                <li><a href="#">적 (-like, type of, sort of)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -93,17 +132,24 @@
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#grammar-accordion" href="#future">
-                                                Showing future action
+                                            <a data-toggle="collapse" data-parent="#grammar-accordion" href="#verbs">
+                                                Verb Particles
                                             </a>
                                         </h4>
                                     </div>
-                                    <div id="future" class="panel-collapse collapse">
+                                    <div id="verbs" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
-                                                <li><a href="#">V. + ㄹ/을 거예요</a></li>
-                                                <li><a href="#">A.V. + (으)려고 하다</a></li>
-                                                <li><a href="#">A.V. + ㄹ/을게(요)</a></li>
+                                                <li><a href="#">고 (and)</a></li>
+                                                <li><a href="#">거나 (or)</a></li>
+                                                <li><a href="#">지만 (but)</a></li>
+                                                <li><a href="#">(으)면 (if)</a></li>
+                                                <li><a href="#">지만 (but)</a></li>
+                                                <li><a href="#">아/어/여서,(으)니까 (because,so)</a></li>
+                                                <li><a href="#">(으)며,(으)면서 (while, at the same time)</a></li>
+                                                <li><a href="#">자마자 (as soon as)</a></li>
+                                                <li><a href="#">다가 (while, and then)</a></li>
+                                                <li><a href="#">ㄹ/을 테니까 (assumption)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -111,12 +157,68 @@
                                 <div class="panel panel-default">
                                     <div class="panel-heading">
                                         <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#suggest">
-                                                Asking or Suggesting
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#adjectives">
+                                                Adjectives
                                             </a>
                                         </h4>
                                     </div>
-                                    <div id="suggest" class="panel-collapse collapse">
+                                    <div id="adjectives" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav">
+                                                <li><a href="#">V. + ㄹ/을까(요)?</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title">
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#copula">
+                                                Endings/Interrogative/Imperative
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="copula" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav">
+                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
+                                                <li><a href="#">잖아요 (c'mon, you know)</a></li>
+                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
+                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
+                                                <li><a href="#">잖아요 (c'mon, you know)</a></li>
+                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
+                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
+                                                <li><a href="#">잖아요 (c'mon, you know)</a></li>
+                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title">
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#quote">
+                                                Indirect Speech
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="quote" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav">
+                                                <li><a href="#">V. + ㄹ/을까(요)?</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title">
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#expressions">
+                                                Misc Expressions
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="expressions" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
                                                 <li><a href="#">V. + ㄹ/을까(요)?</a></li>
