adding alot of grammar

--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
                                                 <li><a href="#">아/어/여 (present tense)</a></li>
                                                 <li><a href="#">았/었/였 (past tense)</a></li>
                                                 <li><a href="#">ㄹ거예요 (future tense)</a></li>
+                                                <li><a href="#">으시 (honorific particle)</a></li>
+                                                <li><a href="#">ㅂ니다 (honorific form)</a></li>
                                                 <li><a href="#">고 있어요 (present progressive)</a></li>
                                                 <li><a href="#">안,지 않다 (negation)</a></li>
-                                                <li><a href="#">기,는 것 (verb into noun)</a></li>
-                                                <li><a href="#">ㄴ/은,는,ㄹ/을 (verb into adjective)</a></li>
+                                                <li><a href="#">에,에서 (location, time)</a></li>
+                                                <li><a href="#">에서,부터,까지 (from, to)</a></li>
+                                                <li><a href="#">기,는 것,(으)ㅁ (verb into noun)</a></li>
+                                                <li><a href="#">(으)ㄴ,는,(으)ㄹ (verb into adjective)</a></li>
                                                 <li><a href="#">이,히,리,기,되다 (passive tense)</a></li>
-                                                <li><a href="#">ㄴ다 (narrative tense)</a></li>
+                                                <li><a href="#">(ㄴ/는)다 (narrative tense)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -116,13 +120,13 @@
                                                 <li><a href="#">와/과,하고,(이)랑 (and)</a></li>
                                                 <li><a href="#">도 (also, too)</a></li>
                                                 <li><a href="#">만 (only)</a></li>
-                                                <li><a href="#">에 (location, time)</a></li>
-                                                <li><a href="#">에서 (from, location)</a></li>
-                                                <li><a href="#">부터,까지 (from, to)</a></li>
+                                                <li><a href="#">전에(before)</a></li>
                                                 <li><a href="#">한테,한테서,에게,에게서,께 (from, to)</a></li>
                                                 <li><a href="#">보다,비해서 (comparison)</a></li>
-                                                <li><a href="#">위해/위해서 (in order to)</a></li>
+                                                <li><a href="#">를 위해/위해서 (in order to)</a></li>
                                                 <li><a href="#">중에,중에서,사이에,사이에서 (between, amongst)</a></li>
+                                                <li><a href="#">(이)라도 (not best choice)</a></li>
+                                                <li><a href="#">에도 불구하고 (despite,although)</a></li>
                                                 <li><a href="#">만큼 (as much as)</a></li>
                                                 <li><a href="#">적 (-like, type of, sort of)</a></li>
                                             </ul>
@@ -144,28 +148,29 @@
                                                 <li><a href="#">거나 (or)</a></li>
                                                 <li><a href="#">지만 (but)</a></li>
                                                 <li><a href="#">(으)면 (if)</a></li>
-                                                <li><a href="#">지만 (but)</a></li>
                                                 <li><a href="#">아/어/여서,(으)니까 (because,so)</a></li>
                                                 <li><a href="#">(으)며,(으)면서 (while, at the same time)</a></li>
-                                                <li><a href="#">자마자 (as soon as)</a></li>
-                                                <li><a href="#">다가 (while, and then)</a></li>
-                                                <li><a href="#">ㄹ/을 테니까 (assumption)</a></li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="panel panel-default">
-                                    <div class="panel-heading">
-                                        <h4 class="panel-title">
-                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#adjectives">
-                                                Adjectives
-                                            </a>
-                                        </h4>
-                                    </div>
-                                    <div id="adjectives" class="panel-collapse collapse">
-                                        <div class="panel-body">
-                                            <ul class="nav">
-                                                <li><a href="#">V. + ㄹ/을까(요)?</a></li>
+                                                <li><a href="#">밖에 (except for)</a></li>
+                                                <li><a href="#">(으)ㄴ 후에/뒤에/다음에 (after doing)</a></li>
+                                                <li><a href="#">아/어/여도 (even though)</a></li>
+                                                <li><a href="#">(으)ㄴ/는데 (explanation,result)</a></li>
+                                                <li><a href="#">자마자,기가 무셥게,기가 바쁘게 (as soon as)</a></li>
+                                                <li><a href="#">을수록 (the more something is)</a></li>
+                                                <li><a href="#">다가 (transition between action)</a></li>
+                                                <li><a href="#">(으)ㄴ/는지 (whether or not)</a></li>
+                                                <li><a href="#">(으)ㄴ/는 김에 (while you are doing)</a></li>
+                                                <li><a href="#">(으)ㄹ 겸 (slash,and)</a></li>
+                                                <li><a href="#">(으)ㄹ 때 (at the time)</a></li>
+                                                <li><a href="#">아/어/여 봤자,(으)나마나 (even if)</a></li>
+                                                <li><a href="#">느라고 (showing negative result)</a></li>
+                                                <li><a href="#">(ㄹ/을) 테니까 (assumption)</a></li>
+                                                <li><a href="#">(으/느)ㄴ 이상 (since)</a></li>
+                                                <li><a href="#">아무리 아/어/여도 (no matter what)</a></li>
+                                                <li><a href="#">(으/느)ㄴ 데다가 (in addition to)</a></li>
+                                                <li><a href="#">(느)ㄴ 한,기만 하면,지만 않으면 (as long as)</a></li>
+                                                <li><a href="#">도록 (so that,in order to)</a></li>
+                                                <li><a href="#">던 (used to do something)</a></li>
+                                                <li><a href="#">는데도 불구하고 (despite,although)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -181,15 +186,79 @@
                                     <div id="copula" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
-                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
+                                                <li><a href="#">주세요/줘 (requesting)</a></li>
+                                                <li><a href="#">고 싶다 (to want)</a></li>
+                                                <li><a href="#">ㄹ 수 있다 (can do)</a></li>
+                                                <li><a href="#">ㄹ 수도 있다 (might do)</a></li>
+                                                <li><a href="#">을/를 잘/못 하다 (to be good/bad at)</a></li>
+                                                <li><a href="#">(아/어/여 야)되다/하다 (must,should)</a></li>
+                                                <li><a href="#">마세요,말고 (stop doing)</a></li>
+                                                <li><a href="#">ㄹ게요 (promise to do)</a></li>
+                                                <li><a href="#">ㄹ래요?,자 (let's do)</a></li>
+                                                <li><a href="#">ㄹ래요,러/려고 하다 (intention to do)</a></li>
+                                                <li><a href="#">(으)ㄹ까요? (wonder,suggestion)</a></li>
+                                                <li><a href="#">(으)ㄴ/는/(으)ㄹ 것 같다 (think))</a></li>
                                                 <li><a href="#">잖아요 (c'mon, you know)</a></li>
-                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
-                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
-                                                <li><a href="#">잖아요 (c'mon, you know)</a></li>
-                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
-                                                <li><a href="#">아/어/여요,자 (let's)</a></li>
-                                                <li><a href="#">잖아요 (c'mon, you know)</a></li>
-                                                <li><a href="#">(으)ㄹ 까? (suggesting)</a></li>
+                                                <li><a href="#">네요 (emotion,surprise)</a></li>
+                                                <li><a href="#">(으)ㄴ/는데 (detail,shock)</a></li>
+                                                <li><a href="#">(으)ㄹ 리가 없어요 (impossible, can't be)</a></li>
+                                                <li><a href="#">지,죠 (confirmation)</a></li>
+                                                <li><a href="#">겠 (intention,assumption,opinion)</a></li>
+                                                <li><a href="#">아/어/여도 되다 (ok to do)</a></li>
+                                                <li><a href="#">(으)면 안 되다 (should not)</a></li>
+                                                <li><a href="#">아/어/여 보다 (to try)</a></li>
+                                                <li><a href="#">아/어/여 지다 (to become,to improve)</a></li>
+                                                <li><a href="#">게 되다 (end up doing)</a></li>
+                                                <li><a href="#">(으)ㄹ 뻔 했다 (almost did)</a></li>
+                                                <li><a href="#">나 보다 (guess,suppose,assume)</a></li>
+                                                <li><a href="#">(으)려나 보다 (assumption about future)</a></li>
+                                                <li><a href="#">ㄴ/은/는 편이다 (rather,quite)</a></li>
+                                                <li><a href="#">(으)ㄹ 수 밖에 없다 (no choice,can only)</a></li>
+                                                <li><a href="#">는 중이다 (in the middle of)</a></li>
+                                                <li><a href="#">거든요 (explanation,since)</a></li>
+                                                <li><a href="#">는 구나/군요 (realization)</a></li>
+                                                <li><a href="#">더라,던데요 (experienced)</a></li>
+                                                <li><a href="#">(으)ㄴ/ㄹ 줄 알다/모르다 (to know or not know)</a></li>
+                                                <li><a href="#">에 따라 달라요 (it depends on)</a></li>
+                                                <li><a href="#">(으/느)ㄴ 척/체 하다 (to pretend to)</a></li>
+                                                <li><a href="#">(으)ㄹ 만하다 (to be worth,deserving)</a></li>
+                                                <li><a href="#">게 되어 있다 (to be bound to)</a></li>
+                                                <li><a href="#">(으)면 좋겠어요 (to hope that)</a></li>
+                                                <li><a href="#">(으)ㄴ 적 있다/앖다 (to have done,never have done)</a></li>
+                                                <li><a href="#">(으)ㄹ 따름이다 (we can only)</a></li>
+                                                <li><a href="#">아/어/여 버리다,고 말다 (feelings about completed action)</a></li>
+                                                <li><a href="#">아/어/여 보이다 (looks like,seems like)</a></li>
+                                                <li><a href="#">(으)ㄹ까 보다 (concern,reason,inclination)</a></li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="panel panel-default">
+                                    <div class="panel-heading">
+                                        <h4 class="panel-title">
+                                            <a data-toggle="collapse" data-parent="#grammar-accordian" href="#adjectives">
+                                                Conjunctions, Adverbs
+                                            </a>
+                                        </h4>
+                                    </div>
+                                    <div id="adjectives" class="panel-collapse collapse">
+                                        <div class="panel-body">
+                                            <ul class="nav">
+                                                <li><a href="#">이것,그것,저것 (this,that)</a></li>
+                                                <li><a href="#">누구,무엇,언제,어디,왜,어떻게 (who,what,when,where,why,how)</a></li>
+                                                <li><a href="#">더 (more)</a></li>
+                                                <li><a href="#">덜 (less)</a></li>
+                                                <li><a href="#">아무 (all)</a></li>
+                                                <li><a href="#">너무 (too)</a></li>
+                                                <li><a href="#">아직 (still,yet)</a></li>
+                                                <li><a href="#">같이,처럼 (same,like)</a></li>
+                                                <li><a href="#">그리고,그해서 (and,so)</a></li>
+                                                <li><a href="#">그렇지만,그런데 (but,however)</a></li>
+                                                <li><a href="#">그래도 (yet,but still)</a></li>
+                                                <li><a href="#">그러면 (in that case,if so)</a></li>
+                                                <li><a href="#">따문에 (because,due to)</a></li>
+                                                <li><a href="#">대신에 (instead of)</a></li>
+                                                <li><a href="#">어차피 (anyways)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -205,7 +274,12 @@
                                     <div id="quote" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
-                                                <li><a href="#">V. + ㄹ/을까(요)?</a></li>
+                                                <li><a href="#">(이)라고/라는/래요/라던데요/라잖아요 (quoted noun)</a></li>
+                                                <li><a href="#">(느)ㄴ다고/다는/대요/다던데요/다잖아요 (quoted verb)</a></li>
+                                                <li><a href="#">(이)라는 것,(ㄴ/는)다는 것 (thing that is called)</a></li>
+                                                <li><a href="#">다니까요,라니까요 (emphasize,repeat)</a></li>
+                                                <li><a href="#">(ㄴ/는)다면서요,(이)라면서요 (fact checking)</a></li>
+                                                <li><a href="#">냐고 (reported question)</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -221,7 +295,7 @@
                                     <div id="expressions" class="panel-collapse collapse">
                                         <div class="panel-body">
                                             <ul class="nav">
-                                                <li><a href="#">V. + ㄹ/을까(요)?</a></li>
+                                                <li><a href="#">Greeting</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -243,6 +317,11 @@
                         <div class="panel-body">
                             <ul class="nav">
                                 <li><a href="#">Basic</a></li>
+                                <li><a href="#">Numbers</a></li>
+                                <li><a href="#">Time,Days,Month,Year</a></li>
+                                <li><a href="#">Counting</a></li>
+                                <li><a href="#">Emphasis</a></li>
+                                <li><a href="#">Frequency</a></li>
                                 <li><a href="#">Food</a></li>
                                 <li><a href="#">Travel</a></li>
                                 <li><a href="#">Furniture</a></li>
